--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     font-size: 16px;
-    color: white;
+    color: vars.$text-primary;
     scroll-behavior: smooth;
     scroll-padding-top: 4rem;
 
