Add html rendering - this method will be used to render reviewers stored as HTML files in the static directory

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -7,6 +7,7 @@ $surface-primary: #A44200;
 $surface-secondary: color.adjust(#69140E, $lightness: -10%);
 
 $text-primary: #FFF;
+$text-secondary: #000;
 $text-highlight: #F2F3AE;
 
 $layer-1: #FB8B24;
@@ -14,3 +15,5 @@ $layer-2: #E36414;
 $layer-3: #9A031E;
 $layer-4: #5f0f40;
 $layer-5: #0F4C5C;
+
+$invisible: #0000;
