--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -17,3 +17,7 @@ $layer-4: #5f0f40;
 $layer-5: #0F4C5C;
 
 $invisible: #0000;
+
+$transition-slow: 1000ms;
+$transition-medium: 500ms;
+$transition-fast: 200ms;
