--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -1,5 +1,5 @@
 @use "vars";
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Oswald:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat:wght@400;700&family=Roboto+Mono:wght@100&family=Source+Code+Pro&display=swap');
 
 :root {
     margin: 0;
