Fix unchanging navbar path Navbar path now changes as the user switches path instead of only changing during site reloads

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -73,7 +73,7 @@
     transition: vars.$transition-medium;
 }
 
-.sidebar-toggler-icon:hover {
+.sidebar-toggler:hover .sidebar-toggler-icon {
     background-color: #FFF2;
 }
 
