--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -4,6 +4,7 @@
 .navbar {
     position: fixed;
     right: 0;
+    z-index: 1;
 
     width: 100%;
     height: 3rem;
@@ -31,6 +32,10 @@
     align-items: center;
 }
 
+.navbar-item:first-child {
+    margin-right: auto;
+}
+
 .navbar-link {
     border-radius: 2px;
     padding: 0.25rem;
@@ -56,47 +61,4 @@
     height: 1.5rem;
     margin: 0.75rem;
     background-color: #FFF8;
-}
-
-.navbar-path {
-    height: 100%;
-
-    margin: 0 auto 0 0.75rem;
-
-    display: flex;
-    align-items: center;
-}
-
-.navbar-path-link {
-    border-radius: 2px;
-    padding: 0.25rem;
-
-    display: block;
-
-    font-family: "Roboto Mono", "Courier New", monospace;
-
-    transition: vars.$transition-medium;
-
-    cursor: pointer;
-}
-
-.navbar-path-link:hover {
-    color: vars.$text-highlight;
-    background-color: #FFF2;
-}
-
-.navbar-path-divider {
-    padding: 0.25rem;
-    color: #FFF8;
-}
-
-.navbar-path-contraction {
-    position: relative;
-    display: inline-block;
-}
-
-.navbar-path-tooltip {
-    position: absolute;
-    border-radius: 2px;
-    background-color: vars.$surface-primary;
 }
