--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -4,10 +4,13 @@
 :root {
     margin: 0;
     padding: 0;
+
     font-size: 16px;
     color: vars.$text-primary;
+
+    overflow-x: hidden;
+
     scroll-behavior: smooth;
-    scroll-padding-top: 4rem;
 
     ::-webkit-scrollbar {
         width: 0.5rem;
