--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -1,4 +1,5 @@
 @use "sass:color";
+@use "sass:math";
 @use "vars";
 
 .sidebar {
@@ -7,7 +8,7 @@
 
     width: 16rem;
     height: calc(100vh - 6rem);
-    border-radius: 0 0.25rem 0.25rem 0;
+    border-radius: 0 0.5rem 0.5rem 0;
 
     background: linear-gradient(45deg + 180deg, vars.$layer-4, vars.$layer-1);
 
@@ -26,7 +27,7 @@
 .sidebar-header {
     width: 100%;
     height: 3rem;
-    border-top-right-radius: 0.25rem;
+    border-top-right-radius: 0.5rem;
 
     margin: 0;
     padding: 0.5rem;
@@ -55,11 +56,15 @@
 .sidebar-links {
     width: 100%;
 
+    border-bottom: 2px solid #FFF0;
+
     margin: 0;
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 1rem;
     box-sizing: border-box;
 
     list-style: none;
+
+    transition: vars.$transition-medium;
 }
 
 .sidebar-item {
@@ -69,11 +74,11 @@
 }
 
 .sidebar-item:first-child {
-    border-radius: 0.25rem 0.25rem 0 0;
+    border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .sidebar-item:last-child {
-    border-radius: 0 0 0.25rem 0.25rem;
+    border-radius: 0 0 0.5rem 0.5rem;
 }
 
 .sidebar-link {
@@ -95,7 +100,7 @@
 
 .sidebar-text {
     font-family: "Roboto Mono", "Courier New", monospace;
-    font-size: (7/8) * 1rem;
+    // font-size: math.div(7rem, 8);
     font-weight: 400;
 }
 
@@ -107,7 +112,7 @@
     width: 100%;
 
     margin: 0;
-    padding: 0.5rem;
+    padding: 0 0.5rem 1rem 0.5rem;
     box-sizing: border-box;
 
     overflow: auto;
