--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -100,7 +100,7 @@
 
 .sidebar-text {
     font-family: "Roboto Mono", "Courier New", monospace;
-    // font-size: math.div(7rem, 8);
+    font-size: math.div(7rem, 8);
     font-weight: 400;
 }
 
@@ -116,4 +116,14 @@
     box-sizing: border-box;
 
     overflow: auto;
+}
+
+.sidebar.expanded {
+    height: 100%;
+    border-radius: 0;
+    translate: 0 0;
+
+    .sidebar-header {
+        border-top-right-radius: 0;
+    }
 }
