--- a/src/styles/Topbar.scss
+++ b/src/styles/Topbar.scss
@@ -1,4 +1,3 @@
-@use "sass:color";
 @use "vars";
 
 .topbar {
@@ -20,12 +19,20 @@
     transition: vars.$transition-medium;
 }
 
+.topbar.expanded {
+    width: calc(100% - 13rem);
+}
+
 .topbar-item {
     height: 100%;
     padding: 0 0.5rem;
 
     display: flex;
     align-items: center;
+}
+
+.topbar-item:first-child {
+    margin-right: auto;
 }
 
 .topbar-link {
@@ -35,7 +42,7 @@
     display: flex;
     align-items: center;
 
-    transition: vars.$transition-medium;
+    transition: all vars.$transition-medium;
 }
 
 .topbar-item:hover .topbar-link {
@@ -46,7 +53,6 @@
 .topbar-icon {
     width: 1.5rem;
     height: 1.5rem;
-    transition: vars.$transition-medium;
 }
 
 .topbar-divider {
@@ -56,44 +62,6 @@
     background-color: #FFF4;
 }
 
-.path {    
-    height: 3rem;
-    margin-left: 0.75rem;
-    margin-right: auto;
-    display: flex;
-    align-items: center;
-}
-
-.path-link {
-    border-radius: 2px;
-    padding: 0.25rem;
-
-    display: block;
-
-    font-family: "Roboto Mono", "Courier New", monospace;
-
-    transition: vars.$transition-medium;
-
-    cursor: pointer;
-}
-
-.path-link:hover {
-    color: vars.$text-highlight;
-    background-color: #FFF2;
-}
-
-.path-divider {
-    padding: 0.25rem;
-    color: #FFF8;
-}
-
-.path-contraction {
-    position: relative;
-    display: inline-block;
-}
-
-.path-tooltip {
-    position: absolute;
-    border-radius: 2px;
-    background-color: vars.$surface-primary;
+.topbar-link.topbar-icon.expanded {
+    rotate: 180deg;
 }
