--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -37,6 +37,10 @@ main {
     transition: vars.$transition-medium;
 }
 
+main.expanded {
+    padding: 4rem 3rem 1rem 19rem;
+}
+
 h1, h2, h3 {
     font-family: "Montserrat", "Cascadia Code ExtraLight", monospace;
 }
