--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -18,10 +18,20 @@
 
     translate: -100% 3rem;
     transition: vars.$transition-medium;
-}
 
-.sidebar:hover, .sidebar.toggled {
-    translate: 0 3rem;
+    &:hover, &.toggled {
+        translate: 0 3rem;
+    }
+
+    &.expanded {
+        height: 100%;
+        border-radius: 0;
+        translate: 0 0;
+    }
+
+    &.expanded &-header {
+        border-top-right-radius: 0;
+    }
 }
 
 .sidebar-header {
@@ -68,26 +78,21 @@
 }
 
 .sidebar-item {
-    height: 1rem;
-    padding: 0.25rem 0.5rem;
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    
     transition: vars.$transition-medium;
 }
 
-.sidebar-item:first-child {
-    border-radius: 0.5rem 0.5rem 0 0;
-}
-
-.sidebar-item:last-child {
-    border-radius: 0 0 0.5rem 0.5rem;
-}
-
 .sidebar-link {
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: 1rem;
 
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    padding: 0.25rem 0.5rem;
+    box-sizing: content-box;
 
     display: flex;
     align-items: center;
@@ -104,59 +109,36 @@
     font-weight: 400;
 }
 
-.sidebar-item:hover, .sidebar-header:hover {
-    background-color: #FFF2;
-}
-
 .sidebar-nav {
     width: 100%;
+    overflow: auto;
 }
 
 .sidebar-dropdowns {
     width: 100%;
-
     margin: 0;
     padding: 0 0.5rem 1rem 0.5rem;
     box-sizing: border-box;
-
-    overflow: auto;
 }
 
 .sidebar-dropdown {
-    width: auto;
+    height: auto;
+    transition: vars.$transition-medium;
 }
 
-.sidebar-toggle {
-    width: auto;
-    height: 100%;
-    display: flex;
-    column-gap: 0.25rem;
-}
-
-.sidebar-toggle-toggler {
+.sidebar-toggler {
+    position: absolute;
     height: 1rem;
     border-radius: 0.25rem;
     transition: vars.$transition-medium;
 }
 
-.sidebar-toggle-toggler:hover {
+.sidebar-toggler.rotated {
+    rotate: 90deg;
+}
+
+.sidebar-header:hover,
+.sidebar-link:hover,
+.sidebar-toggler:hover {
     background-color: #FFF2;
-}
-
-.sidebar-toggle-link {
-    @extend .sidebar-link;
-}
-
-.sidebar-toggle-icon {
-    height: 1rem;
-}
-
-.sidebar.expanded {
-    height: 100%;
-    border-radius: 0;
-    translate: 0 0;
-
-    .sidebar-header {
-        border-top-right-radius: 0;
-    }
 }
