--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -1,6 +1,7 @@
 @use "vars";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat:wght@400;700&family=Roboto+Mono:wght@100&family=Source+Code+Pro&display=swap');
 
+
 :root {
     margin: 0;
     padding: 0;
@@ -32,13 +33,25 @@ body {
     background-color: vars.$bg-primary;
 }
 
-main {
-    padding: 4rem 3rem 1rem 3rem;
-    transition: vars.$transition-medium;
+.wrapper {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
 }
 
-main.expanded {
-    padding: 4rem 3rem 1rem 19rem;
+.ghost {
+    width: 0;
+    height: 100vh;
+    transition: vars.$transition-medium;
+
+    &.expanded {
+        width: 16rem;
+    }
+}
+
+main {
+    padding: 4rem 3rem 1rem 3rem;
+    flex: 1;
 }
 
 h1, h2, h3 {
@@ -53,23 +66,11 @@ a {
     color: white;
     text-decoration: none;
     transition: 500ms;
-}
 
-a:hover, a:active {
-    color: vars.$text-highlight;
-    text-decoration: none;
-}
-
-.transition {
-    background-color: white;
-    box-sizing: border-box;
-
-    width: calc(100% - 200px);
-    height: 6px;
-
-    margin: 3rem auto;
-    border: 1px solid white;
-    border-radius: 3px;
+    &:hover, &:active {
+        color: vars.$text-highlight;
+        text-decoration: none;
+    }
 }
 
 .katex-html {
