--- a/src/styles/Topbar.scss
+++ b/src/styles/Topbar.scss
@@ -30,6 +30,10 @@
     display: flex;
     align-items: center;
 
+    &:nth-child(2) {
+        margin-right: auto;
+    }
+
     &:hover .topbar-link {
         background-color: #FFF2;
         color: vars.$text-highlight;
@@ -60,50 +64,4 @@
     height: 1.5rem;
     margin: 0.75rem;
     background-color: #FFF4;
-}
-
-.path {
-    height: 3rem;
-
-    margin-left: 1rem;
-    margin-right: auto;
-
-    display: flex;
-    align-items: center;
-
-    transition: vars.$transition-medium;
-}
-
-.path-link {
-    border-radius: 2px;
-    padding: 0.25rem;
-
-    display: block;
-
-    font-family: "Roboto Mono", "Courier New", monospace;
-
-    transition: vars.$transition-medium;
-
-    cursor: pointer;
-
-    &:hover {
-        color: vars.$text-highlight;
-        background-color: #FFF2;
-    }
-}
-
-.path-divider {
-    padding: 0.25rem;
-    color: #FFF8;
-}
-
-.path-contraction {
-    position: relative;
-    display: inline-block;
-}
-
-.path-tooltip {
-    position: absolute;
-    border-radius: 2px;
-    background-color: vars.$surface-primary;
 }
